refactor code to be styled components

--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -1,19 +1,19 @@
-
-.cardContainer{
-  width: 80%;
-}
-
-.systemBoard{
-  width: 30%;
-  margin: 20px;
-}
-
-.appCard{
-  margin: 48px;
-
-}
-
-.mainContainer{
-  display: flex;
-  justify-content: space-between;
-}
+/*  */
+/* .cardContainer{ */
+/*   width: 80%; */
+/* } */
+/*  */
+/* .systemBoard{ */
+/*   width: 30%; */
+/*   margin: 20px; */
+/* } */
+/*  */
+/* .appCard{ */
+/*   margin: 48px; */
+/*  */
+/* } */
+/*  */
+/* .mainContainer{ */
+/*   display: flex; */
+/*   justify-content: space-between; */
+/* } */
