refactored dashboard and menubar to make the code more readable

--- a/src/components/menubar/MenuBar.css
+++ b/src/components/menubar/MenuBar.css
@@ -12,6 +12,11 @@
 /*   margin: 10px; */
 /*  */
 /*  */
+/*  */
+/* } */
+/*  */
+/* .dashButton:hover{ */
+/*   background-color:#FAF0E6; */
 /* } */
 /*  */
 /* .BannerContainer{ */
